Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,8 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories = None\n",
-    "newsgroups_train = None\n",
+    "categories = ['alt.atheism', 'comp.windows.x', 'rec.sport.hockey', 'sci.crypt', 'talk.politics.guns']newsgroups_train = None\n",
     "newsgroups_test = None"
    ]
   },
